# signal-jam

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crate/: Cargo.toml
crate/src/: engine.rs  lib.rs  puzzle.rs  rng.rs
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  VISION.md
docs/launch/: devto.md
web/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: audio.ts  date.ts  main.ts  spectrum.ts  storage.ts  style.css  wasm-module.d.ts  waterfall.ts
web/test/: audio.test.ts  date.test.ts  main.test.ts  spectrum.test.ts  storage.test.ts  waterfall.test.ts
