[package]
name = "signal-jam-core"
version = "0.1.0"
edition = "2021"
description = "Puzzle simulation core for Signal Jam, compiled to WASM"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true

[dev-dependencies]
proptest = "1.11.0"
